create global styles

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,17 +3,18 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
-  background-color: #1d1f27;
+  height: 60px;
+  background-color: #F22816;
   padding: 0 20px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
 }
 
 .nav__left {
   flex: 1;
+
+  img{
+    width: 120px;
+    height: 50px;
+  }
 }
 
 .nav__middle {
@@ -29,6 +30,11 @@ nav {
   padding: 8px;
   border-radius: 25px;
   background-color: white;
+
+  button{
+    border: none;
+    background-color: transparent;
+  }
 }
 
 .input__wrapper input {
@@ -47,18 +53,18 @@ input:active {
   flex: 1;
 }
 
-.cart__icon {
-  position: relative;
-  width: max-content;
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+// .cart__icon {
+//   position: relative;
+//   width: max-content;
+//   margin-left: auto;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
-.cart__icon i {
-  cursor: pointer;
-}
+// .cart__icon i {
+//   cursor: pointer;
+// }
 
 .item__count {
   position: absolute;
