--- a/src/components/List/style.scss
+++ b/src/components/List/style.scss
@@ -17,11 +17,11 @@
 
 .container_pokemon{
     max-width: 1300px;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: repeat(auto-fill ,minmax(300px,1fr));
     grid-gap: 20px;
-    padding: 30px;
+    padding: 25px;
     margin: auto;
 }
 .wrapper-top{
@@ -53,7 +53,6 @@
   box-shadow: 0 3px 15px rgba(100,100,100,0.5);
   transition: all 0.2s ease-in-out;
   cursor: pointer;
-  width: 320px;
   height: 400px;
 }
 .wrapper_pokemon:hover{
